// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoutedTabSwitcher expect to set 1 as active tab 1`] = `
<DocumentFragment>
  <li
    class="pf-v5-c-tabs__item"
    role="presentation"
  >
    <button
      aria-controls="pf-tab-section-1-"
      aria-selected="false"
      class="pf-v5-c-tabs__link"
      data-ouia-component-type="PF5/TabButton"
      data-ouia-safe="true"
      id="pf-tab-1-"
      role="tab"
      type="button"
    />
  </li>
</DocumentFragment>
`;

exports[`RoutedTabSwitcher expect to set systems as activeKey 1`] = `
<DocumentFragment>
  DETAILS
</DocumentFragment>
`;

exports[`RoutedTabs expect to render first tab 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-tabs"
    data-ouia-component-id="OUIA-Generated-Tabs-1"
    data-ouia-component-type="PF5/Tabs"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v5-c-tabs__list"
      role="tablist"
    >
      <li
        class="pf-v5-c-tabs__item"
        role="presentation"
      >
        <button
          aria-controls="pf-tab-section-details-policy-details"
          aria-selected="false"
          class="pf-v5-c-tabs__link"
          data-ouia-component-type="PF5/TabButton"
          data-ouia-safe="true"
          id="pf-tab-details-policy-details"
          role="tab"
          type="button"
        >
          Details
        </button>
      </li>
      <li
        class="pf-v5-c-tabs__item pf-m-current"
        role="presentation"
      >
        <button
          aria-controls="pf-tab-section-rules-policy-rules"
          aria-selected="true"
          class="pf-v5-c-tabs__link"
          data-ouia-component-type="PF5/TabButton"
          data-ouia-safe="true"
          id="pf-tab-rules-policy-rules"
          role="tab"
          type="button"
        >
          Rules
        </button>
      </li>
      <li
        class="pf-v5-c-tabs__item"
        role="presentation"
      >
        <button
          aria-controls="pf-tab-section-systems-policy-systems"
          aria-selected="false"
          class="pf-v5-c-tabs__link"
          data-ouia-component-type="PF5/TabButton"
          data-ouia-safe="true"
          id="pf-tab-systems-policy-systems"
          role="tab"
          type="button"
        >
          Systems
        </button>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`RoutedTabs expect to render second tab 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-tabs"
    data-ouia-component-id="OUIA-Generated-Tabs-2"
    data-ouia-component-type="PF5/Tabs"
    data-ouia-safe="true"
  >
    <ul
      class="pf-v5-c-tabs__list"
      role="tablist"
    >
      <li
        class="pf-v5-c-tabs__item"
        role="presentation"
      >
        <button
          aria-controls="pf-tab-section-details-policy-details"
          aria-selected="false"
          class="pf-v5-c-tabs__link"
          data-ouia-component-type="PF5/TabButton"
          data-ouia-safe="true"
          id="pf-tab-details-policy-details"
          role="tab"
          type="button"
        >
          Details
        </button>
      </li>
      <li
        class="pf-v5-c-tabs__item pf-m-current"
        role="presentation"
      >
        <button
          aria-controls="pf-tab-section-rules-policy-rules"
          aria-selected="true"
          class="pf-v5-c-tabs__link"
          data-ouia-component-type="PF5/TabButton"
          data-ouia-safe="true"
          id="pf-tab-rules-policy-rules"
          role="tab"
          type="button"
        >
          Rules
        </button>
      </li>
      <li
        class="pf-v5-c-tabs__item"
        role="presentation"
      >
        <button
          aria-controls="pf-tab-section-systems-policy-systems"
          aria-selected="false"
          class="pf-v5-c-tabs__link"
          data-ouia-component-type="PF5/TabButton"
          data-ouia-safe="true"
          id="pf-tab-systems-policy-systems"
          role="tab"
          type="button"
        >
          Systems
        </button>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`TabSwitcher expect to render first as default tab 1`] = `
<DocumentFragment>
  <li
    class="pf-v5-c-tabs__item"
    role="presentation"
  >
    <button
      aria-controls="pf-tab-section-0-"
      aria-selected="false"
      class="pf-v5-c-tabs__link"
      data-ouia-component-type="PF5/TabButton"
      data-ouia-safe="true"
      id="pf-tab-0-"
      role="tab"
      type="button"
    />
  </li>
</DocumentFragment>
`;

exports[`TabSwitcher expect to render first tab 1`] = `
<DocumentFragment>
  <li
    class="pf-v5-c-tabs__item"
    role="presentation"
  >
    <button
      aria-controls="pf-tab-section-0-"
      aria-selected="false"
      class="pf-v5-c-tabs__link"
      data-ouia-component-type="PF5/TabButton"
      data-ouia-safe="true"
      id="pf-tab-0-"
      role="tab"
      type="button"
    />
  </li>
</DocumentFragment>
`;

exports[`TabSwitcher expect to render second default tab 1`] = `
<DocumentFragment>
  <li
    class="pf-v5-c-tabs__item"
    role="presentation"
  >
    <button
      aria-controls="pf-tab-section-1-"
      aria-selected="false"
      class="pf-v5-c-tabs__link"
      data-ouia-component-type="PF5/TabButton"
      data-ouia-safe="true"
      id="pf-tab-1-"
      role="tab"
      type="button"
    />
  </li>
</DocumentFragment>
`;

exports[`TabSwitcher expect to render second tab 1`] = `
<DocumentFragment>
  <li
    class="pf-v5-c-tabs__item"
    role="presentation"
  >
    <button
      aria-controls="pf-tab-section-1-"
      aria-selected="false"
      class="pf-v5-c-tabs__link"
      data-ouia-component-type="PF5/TabButton"
      data-ouia-safe="true"
      id="pf-tab-1-"
      role="tab"
      type="button"
    />
  </li>
</DocumentFragment>
`;
